--- a/src/main/webapp/css/my.css
+++ b/src/main/webapp/css/my.css
@@ -1,8 +1,8 @@
-.character-table {
+.player-table {
     border: 1px solid black;
 }
 
-.character-table-header {
+.player-table-header {
     border: 1px solid black;
     min-width: 80px;
     padding: 5px;
@@ -14,4 +14,8 @@
 
 .selected-pagination-button {
     color: red;
+}
+
+.auto-width-cell {
+    min-width: auto;
 }
